fixed spacing issue for portuguese

--- a/app/assets/stylesheets/dmptool/blocks/_html.scss
+++ b/app/assets/stylesheets/dmptool/blocks/_html.scss
@@ -45,7 +45,7 @@ body {
 
       .fixed-menu {
         ul[aria-labelledby="learn-menu-button"] {
-          min-width: 480px;
+          min-width: 520px;
         }
 
         ul[aria-labelledby="signin-menu-button"] {
